db user schema and postgres hookup
